--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
   font-size:1rem; line-height:1.2;
 }
 
+/* Improve font rendering sharpness */
+.sharecard, .sc-table-standings td, .sc-table-standings th {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+  
+  
 /* If I use a darker toolbar, I can add a .toolbar-dark parent and mirror colors:
 .toolbar-dark .pretty-select, .toolbar-dark .pretty-input { background:#111; border-color:#222; }
 .toolbar-dark .pretty-select select, .toolbar-dark .pretty-input input { color:#fff; }
@@ -855,6 +862,17 @@ thead th, tbody td{ padding:.55rem .55rem; }
 /* Align numerals neatly in standings on the card */
 .sc-table-standings th, .sc-table-standings td { font-variant-numeric: tabular-nums; }
 
+/* Keep Team column left, centre all stat columns (P → Pts) */
+.sc-table-standings th:first-child,
+.sc-table-standings td:first-child {
+  text-align: left;   /* Team */
+}
+
+.sc-table-standings th:not(:first-child),
+.sc-table-standings td:not(:first-child) {
+  text-align: center; /* P, W, D, L, PD, Pts */
+}
+
 /* Base: use the whole canvas vertically */
 .sharecard{ display:flex; flex-direction:column; justify-content:space-between; }
 
@@ -911,16 +929,16 @@ thead th, tbody td{ padding:.55rem .55rem; }
   margin-top: 16px;
 }
 
+/* Footnote under sharecards */
 .sc-footnote {
-  margin-top: 10px;
-  font-size: 14px;                /* small compared to table text */
-  font-style: italic;
-  color: rgba(255,255,255,0.65);  /* lighter / more muted */
-  text-align: center;
+  margin-top: 8px;     /* slightly higher */
+  font-size: 16px;     /* slightly larger */
+  color: #666;
+  text-align: left;    /* left aligned */
   line-height: 1.3;
 }
 
-
+  
 </style>
 
 <script>
@@ -1837,11 +1855,12 @@ q('#sc-footnote').hidden = false;
     try{
       const SCALE = Math.min(Math.max(window.devicePixelRatio || 2, 2), 3);
       const canvas = await html2canvas(clone, {
-        scale: SCALE,
-        backgroundColor: null,
-        useCORS: true,
-        removeContainer: true
-      });
+      scale: SCALE,
+      backgroundColor: null,
+      useCORS: true,
+      removeContainer: true
+    });
+
       
       const a = document.createElement('a');
       a.href = canvas.toDataURL('image/png');
