--- a/index.html
+++ b/index.html
@@ -116,18 +116,23 @@
   font-size:1rem; line-height:1.2;
 }
 
-/* Hide the browser's small date chevron completely,
-   so only our big .pretty-input::after arrow is visible */
+/* Hide the browser's small date chevron,
+   but keep the native picker behavior */
 .pretty-input input[type="date"]::-webkit-calendar-picker-indicator {
-  opacity:0 !important;
-  -webkit-appearance:none;
-  appearance:none;
-  position:absolute;
-  right:0;
-  width:100%;
-  height:100%;
-  cursor:pointer;
+  opacity: 0 !important;           /* invisible */
+  -webkit-appearance: none !important;
+  appearance: none !important;
+  border: none !important;
+  background: transparent !important;
+
+  /* keep it clickable to trigger the calendar */
+  pointer-events: auto !important;
+  position: absolute;
+  right: 0; top: 0;
+  width: 100%;
+  height: 100%;
 }
+
 
 /* Chevron to match the Club dropdown */
 .pretty-input::after {
