--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 }
 
 /* Base: use the whole canvas vertically */
-.sharecard{ display:flex; flex-direction:column; justify-content:space-between; }
+.sharecard{ display:flex; flex-direction:column; justify-content:flex-start; }
 
 /* Tighten for bigger tables (card-wide) */
 .sc-tight-7 .sc-table-standings thead th{ font-size:30px; padding:16px 18px; }
@@ -1155,7 +1155,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
       <!-- Table footnote -->
       <div id="table-footnote" class="footnote" style="display:none;">
-        Tie-breaks: Head-to-Head (two teams only), then Points Difference, Points For, Goals For.
+        Tie-breaks: Qualification: Head-to-Head (two teams only), then Points Difference, Points For, Goals For. Relegation: Playoff where two teams on equal points.
       </div>
 
       <!-- Share (Competition) -->
