--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
       <!-- Table footnote -->
       <div id="table-footnote" class="footnote" style="display:none;">
-        Tie-breaks: Qualification: Head-to-Head (two teams only), then Points Difference, Points For, Goals For. Relegation: Playoff where two teams on equal points.
+        Tie-breaks: Qualification: Head-to-Head (two teams only), then Points Difference, Points For, Goals For. Relegation: Playoff if two teams on equal points.
       </div>
 
       <!-- Share (Competition) -->
@@ -1576,7 +1576,7 @@ function updateSharebars(){
     </table>
 
       <div class="sc-footnote" id="sc-footnote" hidden>
-        Tie-breaks: Head-to-Head (two-team), then Points Difference, Points For, Goals For.
+        Tie-breaks: Qualification: Head-to-Head (two teams only), then Points Difference, Points For, Goals For. Relegation: Playoff if two teams on equal points.
       </div>
 
       <div class="sc-footer">Limerick club fixtures, results, and tables at limerickgaahub.ie</div>
